<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dynamic IDX Sample</string>
    <string name="you_are_logged_in">You\'re logged in!</string>
    <string name="token_type">Token Type:</string>
    <string name="expires_in">Expires In:</string>
    <string name="access_token">Access Token:</string>
    <string name="refresh_token">Refresh Token:</string>
    <string name="id_token">Id Token:</string>
    <string name="scope">Scope:</string>
    <string name="claims">Claims</string>
    <string name="sign_out">Sign Out</string>
    <string name="try_again">Try Again</string>
    <string name="welcome_to_oie_sample">Welcome to the Okta Samples for Android!</string>
    <string name="welcome_to_oie_sample_description">Congrats on starting this sample application in Android! This sample will demonstrate how to build views that facilitate some common authentication flows:\n• Sign In\n• Sign Up\n• Password Recovery\n• Logout\n\nTo get started, click the button below.</string>
    <string name="login">Login</string>
    <string name="advanced">Advanced</string>
    <string name="recovery_token">Recovery token</string>
</resources>
